parser/src/parser/expressions/snapshots/parser__parser__expressions__let_expr__tests__parse_let_patter_expr.snap
---
source: parser/src/parser/expressions/let_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 34)
  FN_DEF@[0; 34)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 34)
      BLOCK@[10; 34)
        L_CURLY@[10; 11) "{"
        LET_STMT@[11; 20)
          LET_KW@[11; 14) "let"
          WHITESPACE@[14; 15) " "
          TUPLE_PAT@[15; 20)
            L_PAREN@[15; 16) "("
            BIND_PAT@[16; 17)
              NAME@[16; 17)
                IDENT@[16; 17) "a"
            COMMA@[17; 18) ","
            BIND_PAT@[18; 19)
              NAME@[18; 19)
                IDENT@[18; 19) "b"
            R_PAREN@[19; 20) ")"
        SEMI@[20; 21) ";"
        WHITESPACE@[21; 22) " "
        LET_STMT@[22; 32)
          LET_KW@[22; 25) "let"
          WHITESPACE@[25; 26) " "
          PLACEHOLDER_PAT@[26; 27)
            UNDERSCORE@[26; 27) "_"
          WHITESPACE@[27; 28) " "
          EQ@[28; 29) "="
          WHITESPACE@[29; 30) " "
          LITERAL@[30; 32)
            INT_NUMBER@[30; 32) "10"
        SEMI@[32; 33) ";"
        R_CURLY@[33; 34) "}"

